<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EvaluatorApp</string>
    <string name="group_details_title">Group details</string>
    <string name="sprint_title">Sprint</string>
    <string name="socila_stretcher_title">Social Stretcher</string>
	<string name="triangle_title">Triangle</string>
	<string name="digging_title">Digging</string>
	<string name="total_result_title">Total result</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
	<string name="enter_person_id">Enter person id</string>
	<string name="person_details">Add person</string>
	<string name="alert_dialog_ok">OK</string>
	<string name="alert_dialog_cancel">Cancel</string>
	<string name="not_started">Not started</string>
	<string name="started">Started</string>
	<string name="quited">Quited</string>
	<string name="maediacl_quited">Medical quited</string>
	<string name="finish">Finish</string>
	<string name="candidate_name">Candidate name</string>
	<string name="enter_candidate_name">Name</string>
	<string name="enter_candidate_family_name">Family name</string>


	<string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
	<string name="no_sprint_yet">No sprint yet</string>

</resources>
