<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:checkableBehavior="single">

		<item
			android:id="@+id/navigation_item_1"
			android:title="@string/group_details_title"
			android:actionLayout="@drawable/ic_action_overflow"
			android:checked="true"/>

		<item
			android:id="@+id/navigation_item_2"
			android:title="@string/sprint_title"/>

		<item
			android:id="@+id/navigation_item_3"
			android:title="@string/socila_stretcher_title"/>

		<item
			android:id="@+id/navigation_item_4"
			android:title="@string/triangle_title"/>

		<item
			android:id="@+id/navigation_item_5"
			android:title="@string/digging_title"/>

		<item
			android:id="@+id/navigation_item_6"
			android:title="@string/total_result_title"/>

	</group>

</menu>